# elective-waiting-list-api

./: Makefile  README.md  manifest_template.yml  package-lock.json  package.json  pyproject.toml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-tests.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: FlowCallout.GetEnvironmentKeyValueMapData.xml  OAuthV2.VerifyAccessTokenAppLevel3OrCis2Aal3.xml  ServiceCallout.CallHealthcheckEndpoint.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
sandbox/: app.js  app.spec.js  package-lock.json  package.json
specification/: elective-waiting-list.yaml
tests/: test_endpoints.py
