[tool.poetry]
name = "elective-waiting-list"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/elective-waiting-list"
homepage = "https://github.com/NHSDigital/elective-waiting-list-api"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
pytest-nhsd-apim = "^6.0.10"
requests = "^2.32.2"

[tool.poetry.dev-dependencies]
flake8 = "^7.0"
black = "^24.0"
pip-licenses = "^4.0"
jinja2 = "^3.1.5"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.13.0"
gitpython = "^3.1.46"
pytest = "^8.0"
coverage = "^7.5"
aiohttp = "^3.9"
pytest-asyncio = "^0.24"

[tool.poetry.scripts]
